--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,73 @@ override.tf.json
 # Ignore CLI configuration files
 .terraformrc
 terraform.rc
+
+# Terraform
+terraform/terraform.tfvars
+
+# Terraform
+terraform/terraform.tfstate
+terraform/terraform.tfstate.backup
+terraform/terraform.exe
+terraform/.terraform/
+terraform/secrets.tf.backup
+terraform/dev/secrets.tf
+terraform/dev/terraform.tfstate
+terraform/dev/terraform.tfstate.backup
+terraform/staging/secrets.tf
+terraform/staging/.terraform/
+terraform/staging/terraform.tfstate
+terraform/shared/secrets.tf
+terraform/shared/terraform.tfstate
+terraform/shared/terraform.tfstate.backup
+terraform/shared/.terraform/
+terraform/staging/terraform.tfstate.backup
+terraform/shared/accounts.sql
+terraform/secrets_dev.tf
+terraform/secrets_shared.tf
+terraform/secrets_staging.tf
+terraform/terraform.7z
+
+terraform/prod/.terraform/
+terraform/prod/secrets.tf
+
+
+
+# IDEs and editors
+/.idea
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+*.iml
+
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+# dotenv environment variable files
+.env
+.env.development.local
+.env.test.local
+.env.production.local
+.env.local
+
+# temp directory
+.temp
+.tmp
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Diagnostic reports (https://nodejs.org/api/report.html)
+report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+
+
